--- a/checkin.html
+++ b/checkin.html
@@ -23,11 +23,6 @@ pre {
   padding: 10px;
   white-space: pre-wrap;
 }
-#debug {
-  color: #ff8080;
-  font-size: 13px;
-  white-space: pre-wrap;
-}
 #loadingOverlay {
   position: fixed;
   inset: 0;
@@ -67,7 +62,6 @@ pre {
 
 <script>
 /* ================= 基本設定 ================= */
-
 const GIST_ID = "128158194ad773c072ca111b84286cfb";
 const TK_HEX = "6768705F4A3052654D6C75636C6B614B785A63494C4379316C5077754458486C5150313955304361";
 const LIFF_ID = "2008796195-ptiXdSsI";
@@ -78,6 +72,7 @@ const ALLOWED_LOCATIONS = [
   { name: "后里美光", lat: 24.318140260826873, lon: 120.72406839843525, radiusM: 2000 },
 ];
 
+/* ================= 工具 ================= */
 function hexToString(hex) {
   let s = '';
   for (let i = 0; i < hex.length; i += 2)
@@ -86,10 +81,25 @@ function hexToString(hex) {
 }
 const TOKEN = hexToString(TK_HEX);
 
-/* ================= 共用 ================= */
+/* ================= LIFF ================= */
+let lineUserId = null;
 
-function showDebug(msg) {
-  document.getElementById("debug").textContent = "DEBUG:\n" + msg;
+async function initLiffOnce() {
+  await liff.init({ liffId: LIFF_ID });
+  if (liff.isLoggedIn()) {
+    const profile = await liff.getProfile();
+    lineUserId = profile.userId;
+  }
+}
+
+/* ================= UI ================= */
+function updateTitle() {
+  const tel = localStorage.getItem("tel");
+  const title = document.getElementById("title");
+  const status = liff.isLoggedIn() ? "LINE已認證" : "未登入";
+  title.textContent = tel
+    ? `📍 ${tel}（${status}） 📍 打卡系統 V2.3`
+    : `📍 打卡系統 V2.3`;
 }
 
 function showLoading() {
@@ -102,52 +112,19 @@ function hideLoading() {
   document.getElementById("btnCheckin").disabled = false;
 }
 
-function hideCheckin() {
-  document.getElementById("btnCheckin").style.display = "none";
-}
-function showCheckin() {
-  document.getElementById("btnCheckin").style.display = "inline-block";
-}
-
-/* ================= LIFF ================= */
-
-let lineUserId = null;
-
-async function initLiffOnce() {
-  await liff.init({ liffId: LIFF_ID });
-  if (liff.isLoggedIn()) {
-    const profile = await liff.getProfile();
-    lineUserId = profile.userId;
+/* ================= TEL ================= */
+function getTel() {
+  let tel = localStorage.getItem("tel");
+  if (!tel || !/^\d{10}$/.test(tel)) {
+    tel = prompt("請輸入 10 碼手機號碼：");
+    if (!/^\d{10}$/.test(tel)) return null;
+    localStorage.setItem("tel", tel);
   }
+  updateTitle();
+  return tel;
 }
 
 /* ================= GPS ================= */
-
-function getLocationSafe() {
-  return new Promise((resolve, reject) => {
-    if (!navigator.geolocation) {
-      reject("瀏覽器不支援定位");
-      return;
-    }
-
-    navigator.geolocation.getCurrentPosition(
-      pos => resolve(pos),
-      err => {
-        let msg = "定位錯誤";
-        if (err.code === 1) msg = "使用者拒絕定位";
-        else if (err.code === 2) msg = "定位失敗";
-        else if (err.code === 3) msg = "定位逾時";
-        reject(msg);
-      },
-      {
-        enableHighAccuracy: true,
-        timeout: 10000,
-        maximumAge: 0
-      }
-    );
-  });
-}
-
 function distance(lat1, lon1, lat2, lon2) {
   const R = 6371e3;
   const toRad = d => d * Math.PI / 180;
@@ -172,8 +149,40 @@ function findNearestLocation(lat, lon) {
   return { name: nearest.name, distance: Math.round(min) };
 }
 
-/* ================= GIST ================= */
+/* ================= 定位權限 ================= */
+async function checkGeolocationPermission() {
+  if (!navigator.permissions) return true;
+  try {
+    const p = await navigator.permissions.query({ name: "geolocation" });
+    return p.state !== "denied";
+  } catch {
+    return true;
+  }
+}
 
+function tryGetLocation() {
+  return new Promise((resolve, reject) => {
+    navigator.geolocation.getCurrentPosition(
+      pos => resolve(pos),
+      err => reject(err),
+      { enableHighAccuracy: true, timeout: 10000 }
+    );
+  });
+}
+
+async function retryLocation() {
+  document.getElementById("btnRelocate").style.display = "none";
+  try {
+    await tryGetLocation();
+    document.getElementById("status").innerText = "✅ 定位成功，請打卡";
+    document.getElementById("btnCheckin").style.display = "inline-block";
+  } catch {
+    document.getElementById("status").innerText = "❌ 尚未開啟定位權限";
+    document.getElementById("btnRelocate").style.display = "inline-block";
+  }
+}
+
+/* ================= GitHub ================= */
 let gistCache = null;
 
 async function githubGET() {
@@ -188,7 +197,7 @@ async function githubGET() {
 async function getGistData() {
   if (gistCache) return gistCache;
   const res = await githubGET();
-  if (!res.ok) throw new Error("Gist 讀取失敗");
+  if (!res.ok) throw new Error("Gist 連線失敗");
   gistCache = await res.json();
   return gistCache;
 }
@@ -204,20 +213,9 @@ async function githubPATCH(payload) {
   });
 }
 
-/* ================= 使用者 ================= */
-
+/* ================= UID ================= */
 function getFileName() {
   return `${lineUserId}.txt`;
-}
-
-function getTel() {
-  let tel = localStorage.getItem("tel");
-  if (!tel || !/^\d{10}$/.test(tel)) {
-    tel = prompt("請輸入 10 碼手機號碼");
-    if (!/^\d{10}$/.test(tel)) return null;
-    localStorage.setItem("tel", tel);
-  }
-  return tel;
 }
 
 async function loadUIDFile() {
@@ -225,114 +223,137 @@ async function loadUIDFile() {
     const data = await getGistData();
     const file = data.files[getFileName()];
     if (!file) return false;
-
     const first = file.content.split("\n")[0];
-    const p = first.split("\t");
-    if (p[2]) localStorage.setItem("tel", p[2]);
-    return true;
+    const parts = first.split("\t");
+    if (parts.length >= 3 && /^\d{10}$/.test(parts[2])) {
+      localStorage.setItem("tel", parts[2]);
+      return true;
+    }
+    return false;
   } catch {
     return false;
   }
 }
 
-/* ================= 打卡 ================= */
+/* ================= 讀取紀錄 ================= */
+async function loadMyFile() {
+  try {
+    const data = await getGistData();
+    const file = data.files[getFileName()];
+    if (!file) {
+      document.getElementById("records").textContent = "尚無打卡紀錄";
+      return;
+    }
+    document.getElementById("records").textContent = file.content;
+  } catch {
+    document.getElementById("freePass").style.display = "block";
+    document.getElementById("btnCheckin").style.display = "none";
+    document.getElementById("status").innerText = "⚠ 系統異常，自動放行";
+  }
+}
 
+/* ================= 打卡 ================= */
 async function updateMyFile() {
   if (!getTel()) return;
 
   showLoading();
 
   try {
-    const pos = await getLocationSafe();
+    const pos = await tryGetLocation();
     const loc = findNearestLocation(pos.coords.latitude, pos.coords.longitude);
 
     const now = new Date();
     const timeStr =
-      `${now.getFullYear()}/${String(now.getMonth()+1).padStart(2,'0')}/${String(now.getDate()).padStart(2,'0')} ` +
-      `${String(now.getHours()).padStart(2,'0')}:${String(now.getMinutes()).padStart(2,'0')}:${String(now.getSeconds()).padStart(2,'0')}`;
+      `${now.getFullYear()}/${String(now.getMonth() + 1).padStart(2, '0')}/${String(now.getDate()).padStart(2, '0')} ` +
+      `${String(now.getHours()).padStart(2, '0')}:${String(now.getMinutes()).padStart(2, '0')}:${String(now.getSeconds()).padStart(2, '0')}`;
 
     const line = `050\t${timeStr}\t${getTel()}\t${loc.name} (${loc.distance}m)`;
 
     const data = await getGistData();
     const old = data.files[getFileName()]?.content || "";
 
-    const rows = old ? old.split("\n") : [];
-    rows.unshift(line);
+    const nowTime = Date.now();
+    const filtered = old.split("\n").filter(l => {
+      const p = l.split("\t");
+      if (!p[1]) return false;
+      const t = Date.parse(p[1]);
+      return !isNaN(t) && (nowTime - t <= 90 * 86400000);
+    });
+
+    filtered.unshift(line);
 
     await githubPATCH({
       files: {
-        [getFileName()]: { content: rows.join("\r\n") }
+        [getFileName()]: { content: filtered.join("\r\n") }
       }
     });
 
+    gistCache = null;
+
     document.getElementById("status").innerText = "✅ 打卡成功";
-    document.getElementById("records").textContent = rows.join("\n");
+    document.getElementById("records").textContent = filtered.join("\n");
 
   } catch (e) {
-    showDebug(e.toString());
-    document.getElementById("status").innerText = "❌ 打卡失敗";
+    alert("❌ 打卡失敗：" + e);
   } finally {
     hideLoading();
   }
 }
 
 /* ================= 啟動 ================= */
-
 window.onload = async () => {
-  hideCheckin();
+  document.getElementById("btnCheckin").style.display = "none";
 
   await initLiffOnce();
 
   if (!lineUserId) {
-    alert("請使用 LINE 開啟");
+    alert("請使用 LINE 開啟此頁面");
+    return;
+  }
+
+  const hasUID = await loadUIDFile();
+  if (!hasUID) {
+    alert("!!! 初次使用請輸入正確電話，錯誤需人工修正 !!!");
+    localStorage.removeItem("tel");
+    getTel();
+  }
+
+  updateTitle();
+  loadMyFile();
+
+  const hasPermission = await checkGeolocationPermission();
+
+  if (!hasPermission) {
+    document.getElementById("btnRelocate").style.display = "inline-block";
+    document.getElementById("status").innerText = "⚠ 尚未允許定位";
     return;
   }
 
   try {
-    const ok = await loadUIDFile();
-    if (!ok) {
-      alert("首次使用，請輸入手機號碼");
-      localStorage.removeItem("tel");
-      getTel();
-    }
-
-    const pos = await getLocationSafe();
-    const loc = findNearestLocation(pos.coords.latitude, pos.coords.longitude);
-
-    showDebug(
-      `定位成功\n` +
-      `緯度: ${pos.coords.latitude}\n` +
-      `經度: ${pos.coords.longitude}\n` +
-      `最近點: ${loc.name}\n` +
-      `距離: ${loc.distance} 公尺`
-    );
-
-    showCheckin();
-
-  } catch (err) {
-    showDebug("定位失敗：\n" + err);
-    hideCheckin();
+    await tryGetLocation();
+    document.getElementById("btnCheckin").style.display = "inline-block";
+  } catch {
+    document.getElementById("btnRelocate").style.display = "inline-block";
+    document.getElementById("status").innerText = "⚠ 無法取得定位";
   }
 };
 </script>
 </head>
 
 <body>
-
 <div id="loadingOverlay">
   <div class="spinner"></div>
 </div>
 
-<h2 id="title">📍 打卡系統</h2>
+<h2 id="title">📍 打卡系統 V2.3</h2>
 
 <button id="btnCheckin" onclick="updateMyFile()">打卡</button>
+<button id="btnRelocate" style="display:none" onclick="retryLocation()">📍 重新定位</button>
 
 <p id="status"></p>
-<pre id="debug"></pre>
 
 <div id="freePass">
-  🎉 卡機壞了！<br>
-  今天大放送 😆
+  🎉 卡機壞了！<br>今天大放送，不用打卡 😆
 </div>
 
 <h3>📄 我的紀錄</h3>
