--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0;url=./checkin.html">
+<meta http-equiv="refresh" content="0;url=./checkinV24.htm">
 </head>
 <body></body>
 </html>
