--- a/checkinV24.htm
+++ b/checkinV24.htm
@@ -68,8 +68,9 @@ const LIFF_ID = "2008796195-ptiXdSsI";
 
 const ALLOWED_LOCATIONS = [
   { name: "台北公司", lat: 24.986794380363925, lon: 121.5336918999006, radiusM: 200 },
-  { name: "台中辦公室", lat: 24.310777911896015, lon: 120.72138183688088, radiusM: 2000 },
-  { name: "后里美光", lat: 24.318140260826873, lon: 120.72406839843525, radiusM: 2000 },
+  { name: "台中辦公室", lat: 24.310777911896015, lon: 120.72138183688088, radiusM: 3000 },
+  { name: "后里美光", lat: 24.318140260826873, lon: 120.72406839843525, radiusM: 3000 },
+  { name: "台積台南", lat: 23.1179631, lon: 120.2246118, radiusM: 10000 },
 ];
 
 /* ================= 工具 ================= */
